--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 <meta property="og:title" content=""/>
 <meta property="og:description" content=""/>
 <meta property="og:url" content=""/>
+	
+	<!-- Global site tag (gtag.js) - Google Ads: 455956435 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-455956435"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-455956435');
+</script>
+
+	
 </head>
 <body>
 <!-- after_qbici -->
